Fix team tile alignment issues.

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -934,25 +934,39 @@ form{
 		font-size: 115%;
 		font-weight: 100;
 		margin: 0 1rem 1rem 0;
-			padding: 1rem 3rem 1rem 3rem;
+		padding: 1rem 3rem 1rem 3rem;
 		@include animate;
-		.team-name{
+		&>div{
+			width: 100%;
 			float: left;
-			text-align: center;
-		}
-		.player-count{
-			@extend .team-name;
-			margin-left: 1rem;
-			border-radius: 50%;
-			width: 17px;
-			height: 17px;
-			padding: 0.2rem;
-			font-size: 80%;
-			color: #111;
-			background: #fff;
+			height: 100%;
+			display: table;
+			.team-name{
+				text-align: center;
+				display: table-cell;
+				vertical-align: middle;
+				padding-right: 1rem;
+			}
+			.player-count{
+				@extend .team-name;
+				margin-left: 1rem;
+				border-radius: 50%;
+				width: 16px;
+				height: 16px;
+				padding: 0.2rem;
+				font-size: 70%;
+				font-weight: 400;
+				color: $primary-dark;
+				background-color: lighten($primary-dark, 20%);
+				@include animate;
+			}
 		}
 		&:hover{
 			background-color: lighten($primary-dark, 15%);
+			color: #fff;
+		}
+		&:hover .player-count{
+			background-color: lighten($primary-dark, 40%);
 		}
 	}
 }
